fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,7 @@ li {
  .daily-temp-container {
   grid-row: 2;
   grid-column: 1;
+  margin: 0 auto;
  }
  .daily-description {
   align-self: flex-start;
@@ -342,16 +343,23 @@ li {
  .daily-img {
   grid-row: 3;
   grid-column: 1;
+  position: relative;
+  top: 0;
+  width: 100px;
  }
  .daily-maxmin {
   grid-row: 4;
   grid-column: 1;
   margin: 0 auto;
+  justify-self: start;
+  position: relative;
+  bottom: 50px;
  }
  .daily-wind {
   grid-row: 4;
   grid-column: 1;
-  margin: 20px auto;
+  margin: 0 auto;
+  justify-self: end;
  }
  .submit,
  .search-by {
